--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -3,19 +3,23 @@
 {% block title %}Product Hunt | Login {% endblock %}
 
 {%block content %}
-{% if error %}
-<p class="alert alert-danger">{{ error }}</p>
+{% if state != '' %}
+<p class="alert alert-warning">{{ state }}</p>
 {% endif %}
 
-<h1>Login</h1>
 <div class="container">
     <div class="row">
-        <div class="col-4-sm">
-            <form action="{% url 'login' %}" method="POST">
-                {% csrf_token %}
+        <div class="col-md-6 mx-auto">
+            <h1>Login</h1>
+            {% if next %}
+            <form action="{% url 'login' %}?next={{next}}" method="post" >
+            {% else %}
+            <form action="{% url 'login' %}" method="post" >
+            {% endif %}
+            {% csrf_token %}
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input type="text" class="form-control" name="username" aria-describedby="usernameHelp" placeholder="Enter user name">
+                    <input type="text" class="form-control" name="username" aria-describedby="usernameHelp" placeholder="Enter e-mail" required>
                 </div>
                 <div class="form-group">
                     <label for="Password">Password</label>
